:rocket::art: fixed size main issues on mobile and adding results page

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,26 +1,25 @@
 @use "./styles/vars" as v;
 @use "./styles/mixins" as m;
 
-html {
-  height: 100vh;
-  body {
-    background-color: v.$bg-color;
-    min-height: 100vh;
-    min-width: 100vw;
+body {
+  background-color: v.$bg-color;
+  // min-height: 100vh;
+  min-width: 100vw;
+  main {
+    min-height: 78vh;
+    margin-top: 12vh;
+    margin-bottom: 10vh;
 
-    main {
-      min-height: 85vh;
-      margin: 5rem 0;
+    // margin: 5rem 0;
 
-      @include m.tablets-only {
-        margin-top: 10rem;
-      }
+    // @include m.tablets-only {
+    //   margin-top: 10rem;
+    // }
 
-      @include m.desktop-only {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-    }
+    // @include m.desktop-only {
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    // }
   }
 }
