--- a/src/Pages/Correction/_correction.scss
+++ b/src/Pages/Correction/_correction.scss
@@ -6,14 +6,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  gap: 3rem;
   .game-box {
-    height: 20rem;
-    width: 20rem;
-    display: grid;
-    grid-template-columns: 1fr;
+    // height: 20rem;
+    // width: 20rem;
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    justify-content: center;
+    align-items: center;
     gap: 1rem;
+    // margin-bottom: 5rem;
 
     .media {
       img {
@@ -59,6 +62,7 @@
       justify-content: center;
       align-items: center;
       gap: 2rem;
+
       button {
         padding: 0.5rem 1rem;
         border-radius: 0.5rem;
@@ -98,11 +102,10 @@
       }
     }
   }
-
   .progressbar-box {
+    // margin: 3rem 0.5rem;
     position: fixed;
-    bottom: 2rem;
-    margin: 3rem 0.5rem;
+    bottom: 3rem;
     height: 1rem;
     width: 90%;
     border: 1px solid v.$g-color;
